--- a/apps/web-desktop/src/index.html
+++ b/apps/web-desktop/src/index.html
@@ -641,6 +641,10 @@
         display: block;
       }
 
+      body[data-auth="signed-out"] #auth-action-signedout {
+        display: inline-flex;
+      }
+
       body[data-viewer="pending"] #add-row,
       body[data-viewer="pending"] #add-row-bottom,
       body[data-viewer="pending"] #add-column,
@@ -746,8 +750,9 @@
       }
 
       .tab-bar {
-        display: grid;
-        gap: 10px;
+        display: flex;
+        flex-wrap: wrap;
+        gap: 8px;
         padding: 10px 20px;
         border-bottom: 1px solid var(--line);
         background: #efefef;
@@ -755,15 +760,16 @@
       }
 
       .tab-grid {
-        display: grid;
-        grid-template-columns: repeat(3, minmax(0, 1fr));
+        display: flex;
+        flex-wrap: wrap;
         gap: 8px;
-        justify-items: center;
+        justify-content: flex-start;
+        width: 100%;
       }
 
       .tab-controls {
         display: flex;
-        justify-content: center;
+        justify-content: flex-start;
         gap: 10px;
       }
 
@@ -777,7 +783,7 @@
         cursor: pointer;
         font-size: 0.85rem;
         letter-spacing: 0.02em;
-        width: 100%;
+        width: auto;
         text-align: center;
       }
 
@@ -913,6 +919,14 @@
 
       tbody tr:nth-child(even) td {
         background: #e7e7e7;
+      }
+
+      tbody td:first-child {
+        background: #ffffff;
+      }
+
+      tbody tr:nth-child(even) td:first-child {
+        background: #ffffff;
       }
 
       input[type="text"],
@@ -1342,17 +1356,19 @@
       }
 
       .tab-logo-panel {
-        flex: 1;
+        width: fit-content;
         display: flex;
-        justify-content: center;
-        align-items: center;
+        justify-content: flex-start;
+        align-items: flex-start;
         min-height: 110px;
-        padding: 8px 16px;
+        padding: 8px 12px;
         background: #ffffff;
         border: 2px solid #111111;
         border-radius: 14px;
         gap: 10px;
         flex-direction: column;
+        justify-self: start;
+        text-align: left;
       }
 
       .tab-logo-panel img {
@@ -1365,8 +1381,21 @@
       }
 
       .tab-logo-panel .btn {
-        padding: 6px 12px;
-        font-size: 0.82rem;
+        padding: 3px 8px;
+        font-size: 0.7rem;
+        box-shadow: none;
+        align-self: center;
+      }
+
+      .tab-logo-panel .btn:hover {
+        background: #111111;
+        color: #ffffff;
+      }
+
+      .tab-logo-panel .btn:active {
+        transform: translateY(1px);
+        background: #000000;
+        color: #ffffff;
       }
 
       .footer-note {
@@ -1550,6 +1579,8 @@
         justify-content: flex-start;
         gap: 10px;
         margin-bottom: 16px;
+        flex-wrap: wrap;
+        align-items: center;
       }
 
       #go-top,
@@ -1567,15 +1598,12 @@
         justify-self: center;
       }
 
-      .footer-actions .stat-cell {
-        margin-left: auto;
-      }
-
       .footer-stats {
         display: flex;
         align-items: center;
         gap: 12px;
         flex-wrap: wrap;
+        margin-left: auto;
       }
 
       .local-edit-status {
