--- a/apps/desktop-tauri/src/index.html
+++ b/apps/desktop-tauri/src/index.html
@@ -377,8 +377,11 @@
 
       .auth-row {
         align-items: center;
-        width: auto;
-        justify-content: flex-end;
+        width: 240px;
+        justify-content: center;
+        display: grid;
+        grid-template-columns: repeat(2, minmax(0, 1fr));
+        gap: 8px;
       }
 
       .controls {
@@ -391,6 +394,16 @@
         flex-direction: column;
         align-items: center;
         line-height: 1.1;
+        width: fit-content;
+      }
+
+      #auth-action {
+        text-align: center;
+        justify-content: center;
+      }
+
+      .auth-row .btn {
+        width: 100%;
       }
 
       #share-columns-button .share-columns-sub {
@@ -2145,7 +2158,7 @@
     <dialog id="about-dialog" class="about-dialog">
       <div class="dialog-body">
         <div class="about-goose">🪿</div>
-        <div>Shirt Tracker v1.913 beta</div>
+        <div>Shirt Tracker v1.915 beta</div>
         <div>Date created: 01/30/2026</div>
         <div>© 2026 Aaron Dunn</div>
       </div>
@@ -2314,7 +2327,7 @@
       const LAST_SYNC_KEY = "shirts-last-sync";
       const LAST_CLOUD_UPDATE_KEY = "shirts-last-cloud-update";
       const LAST_CHANGE_KEY = "shirts-last-change";
-      const APP_VERSION = "1.913.0";
+      const APP_VERSION = "1.915.0";
       const IS_WEB_BUILD = false;
       const APP_VERSION_KEY = "shirts-app-version";
       const APP_UPDATE_KEY = "shirts-app-update-date";
@@ -3840,7 +3853,7 @@
           shirtUpdateDate: shirtUpdateTimestamp || null,
           publicShareId: getOrCreatePublicShareId(),
           publicShareVisibility,
-          version: "1.913.0",
+          version: "1.915.0",
         };
       };
 
