--- a/apps/web-mobile/src/index.html
+++ b/apps/web-mobile/src/index.html
@@ -2956,6 +2956,7 @@
       const goTopButton = document.getElementById("go-top");
       const deleteSelectedBottomButton = document.getElementById("delete-selected-bottom");
       const authActionButton = document.getElementById("auth-action");
+      const authActionSignedOutButton = document.getElementById("auth-action-signedout");
       const syncNowButton = document.getElementById("sync-now");
       const verifyBackupButton = document.getElementById("verify-backup");
       const backupStatusText = document.getElementById("backup-status");
