--- a/apps/web-mobile/src/index.html
+++ b/apps/web-mobile/src/index.html
@@ -357,9 +357,10 @@
 
       .header-actions {
         display: flex;
-        justify-content: space-between;
+        justify-content: center;
         align-items: center;
         gap: 16px;
+        width: 100%;
       }
 
       .auth-status {
@@ -378,9 +379,12 @@
       .danger-zone {
         display: grid;
         grid-template-columns: repeat(2, minmax(0, 1fr));
-        gap: 10px 12px;
-        justify-items: stretch;
+        gap: 8px;
+        justify-items: center;
         align-items: center;
+        width: 100%;
+        max-width: 420px;
+        margin: 0 auto;
       }
 
       .header-row {
