--- a/apps/desktop-tauri/src/index.html
+++ b/apps/desktop-tauri/src/index.html
@@ -1464,6 +1464,17 @@
         justify-content: center;
       }
 
+      body[data-auth="signed-out"] .sheet-header {
+        position: relative;
+        justify-content: center;
+      }
+
+      body[data-auth="signed-out"] .sheet-header h2 {
+        position: absolute;
+        left: 50%;
+        transform: translateX(-50%);
+      }
+
       body[data-auth="signed-out"] .danger-zone {
         justify-content: center;
         align-items: center;
@@ -1472,8 +1483,11 @@
       }
 
       body[data-auth="signed-out"] .auth-row {
+        display: flex;
         flex-direction: column;
         align-items: center;
+        width: fit-content;
+        margin: 0 auto;
       }
 
       body[data-auth="signed-out"] .signedout-greeting {
@@ -2158,7 +2172,7 @@
     <dialog id="about-dialog" class="about-dialog">
       <div class="dialog-body">
         <div class="about-goose">🪿</div>
-        <div>Shirt Tracker v1.915 beta</div>
+        <div>Shirt Tracker v1.918 beta</div>
         <div>Date created: 01/30/2026</div>
         <div>© 2026 Aaron Dunn</div>
       </div>
@@ -2327,7 +2341,7 @@
       const LAST_SYNC_KEY = "shirts-last-sync";
       const LAST_CLOUD_UPDATE_KEY = "shirts-last-cloud-update";
       const LAST_CHANGE_KEY = "shirts-last-change";
-      const APP_VERSION = "1.915.0";
+      const APP_VERSION = "1.918.0";
       const IS_WEB_BUILD = false;
       const APP_VERSION_KEY = "shirts-app-version";
       const APP_UPDATE_KEY = "shirts-app-update-date";
@@ -3853,7 +3867,7 @@
           shirtUpdateDate: shirtUpdateTimestamp || null,
           publicShareId: getOrCreatePublicShareId(),
           publicShareVisibility,
-          version: "1.915.0",
+          version: "1.918.0",
         };
       };
 
