--- a/apps/web-mobile/src/index.html
+++ b/apps/web-mobile/src/index.html
@@ -381,10 +381,19 @@
         flex-direction: column;
         gap: 10px;
         justify-content: center;
-        align-items: center;
+        align-items: stretch;
         width: 100%;
         max-width: 420px;
         margin: 0 auto;
+      }
+
+      .danger-zone .header-row {
+        display: grid !important;
+        grid-template-columns: repeat(2, minmax(0, 1fr));
+        gap: 8px;
+        width: 100%;
+        justify-items: stretch;
+        align-items: center;
       }
 
       .header-row {
@@ -428,6 +437,9 @@
         padding: 7px 12px;
         white-space: normal;
         min-width: 0;
+        line-height: 1.1;
+        text-align: center;
+        word-break: break-word;
       }
 
       .header-actions .btn.compact {
