Override signed-in fixed button widths in mobile header
Ensure the mobile action grid buttons use full-width cells by overriding the signed-in 140px width rule that caused overlap.

--- a/apps/web-mobile/src/index.html
+++ b/apps/web-mobile/src/index.html
@@ -792,6 +792,12 @@
         padding: 10px 16px !important;
       }
 
+      body[data-auth="signed-in"][data-viewer="false"] .mobile-action-grid .btn,
+      body[data-auth="signed-in"][data-viewer="false"] .mobile-action-grid #auth-action {
+        width: 100% !important;
+        align-self: stretch;
+      }
+
       #sync-now {
         font-weight: 700;
         border-width: 2px;
