Expand mobile action grid to full width
Make the mobile header action grid fill the screen width on small devices to prevent it from squashing to one side.

--- a/apps/web-mobile/src/index.html
+++ b/apps/web-mobile/src/index.html
@@ -2158,6 +2158,14 @@
       }
 
       @media (max-width: 760px) {
+        .danger-zone {
+          max-width: 100%;
+        }
+
+        .mobile-action-grid {
+          width: 100%;
+        }
+
         .header-actions .header-row {
           display: grid;
           grid-template-columns: repeat(2, minmax(0, 1fr));
