Center mobile action grid within header
Center the mobile action grid using auto margins and justify-content so it no longer hugs the left edge.

--- a/apps/web-mobile/src/index.html
+++ b/apps/web-mobile/src/index.html
@@ -393,6 +393,12 @@
         margin: 0 auto;
       }
 
+      .mobile-action-grid {
+        margin-left: auto;
+        margin-right: auto;
+        justify-content: center;
+      }
+
       .danger-zone .header-row {
         display: grid !important;
         grid-template-columns: repeat(2, minmax(0, 1fr));
