--- a/apps/web-mobile/src/index.html
+++ b/apps/web-mobile/src/index.html
@@ -389,14 +389,13 @@
         justify-content: center;
         align-items: stretch;
         width: 100%;
-        max-width: 520px;
+        max-width: 100%;
         margin: 0 auto;
       }
 
       .mobile-action-grid {
         margin-left: auto;
         margin-right: auto;
-        justify-content: center;
       }
 
       .danger-zone .header-row {
@@ -422,7 +421,7 @@
 
       .mobile-action-grid {
         display: grid;
-        grid-template-columns: repeat(2, minmax(140px, 1fr));
+        grid-template-columns: repeat(2, minmax(0, 1fr));
         grid-auto-rows: minmax(36px, auto);
         gap: 8px;
         width: 100%;
