--- a/apps/web-mobile/src/index.html
+++ b/apps/web-mobile/src/index.html
@@ -1943,6 +1943,12 @@
         font-size: 16px;
       }
 
+      html[data-public-share="true"] #auth-action,
+      html[data-public-share="true"] #auth-action-signedout,
+      html[data-public-share="true"] #share-columns-button {
+        display: none !important;
+      }
+
       .dialog-actions {
         display: flex;
         justify-content: flex-end;
@@ -1952,11 +1958,24 @@
 
       .photo-dialog {
         width: min(800px, 94vw);
+        max-height: 90vh;
+        display: flex;
+        flex-direction: column;
+      }
+
+      .photo-dialog .dialog-body {
+        flex: 1;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        overflow: hidden;
       }
 
       .photo-dialog img {
-        width: 100%;
+        width: auto;
         height: auto;
+        max-width: 100%;
+        max-height: calc(90vh - 140px);
         display: block;
       }
 
