Fix photo dialog visibility
Hide the photo preview dialog unless it is open, preventing the “Full size photo” bar from rendering on every page while preserving the new fit‑to‑viewport sizing on desktop and mobile.

--- a/apps/web-mobile/src/index.html
+++ b/apps/web-mobile/src/index.html
@@ -1959,8 +1959,12 @@
       .photo-dialog {
         width: min(800px, 94vw);
         max-height: 90vh;
-        display: flex;
+        display: none;
         flex-direction: column;
+      }
+
+      .photo-dialog[open] {
+        display: flex;
       }
 
       .photo-dialog .dialog-body {
