--- a/apps/web-desktop/src/index.html
+++ b/apps/web-desktop/src/index.html
@@ -23,6 +23,12 @@
         const token = params.get("share") || params.get("viewer");
         if (!token) return;
         document.documentElement.setAttribute("data-public-share", "true");
+        if (document.body) {
+          document.body.setAttribute("data-public-share", "true");
+          document.body.setAttribute("data-auth", "signed-in");
+          document.body.setAttribute("data-viewer", "pending");
+          return;
+        }
         document.addEventListener("DOMContentLoaded", () => {
           document.body.setAttribute("data-public-share", "true");
           document.body.setAttribute("data-auth", "signed-in");
@@ -1628,6 +1634,10 @@
       #go-top,
       #go-bottom {
         width: 140px;
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
       }
 
       #add-row-bottom,
@@ -1857,8 +1867,17 @@
 
       html[data-public-share="true"] #auth-action,
       html[data-public-share="true"] #auth-action-signedout,
-      html[data-public-share="true"] #share-columns-button {
+      html[data-public-share="true"] #share-columns-button,
+      html[data-public-share="true"] .signedout-login {
         display: none !important;
+      }
+
+      html[data-public-share="true"] #go-top,
+      html[data-public-share="true"] #go-bottom {
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
       }
 
       .dialog-actions {
@@ -3897,6 +3916,13 @@
         document.body.setAttribute("data-viewer", "true");
         if (authActionButton) {
           authActionButton.style.display = "none";
+        }
+        if (authActionSignedOutButton) {
+          authActionSignedOutButton.style.display = "none";
+        }
+        const signedOutLogin = document.querySelector(".signedout-login");
+        if (signedOutLogin) {
+          signedOutLogin.style.display = "none";
         }
         if (shareColumnsButton) {
           shareColumnsButton.style.display = "none";
