Add privacy/contact dialogs and reset button
Added Privacy Policy and Contact Us links in the Legal Stuff footer, built full Privacy Policy sections 1–10 with spacing, and wired dialog open/close behavior (including Contact Us link inside the policy). Implemented Netlify Contact Us dialog with name/email/comments and optional response checkbox, plus red pill Close button styling. Fixed read‑only locks so Contact Us and Profile Name inputs are editable, and added a double‑confirmation “Reset to Fresh Defaults” button in the Danger Zone that applies fresh defaults and syncs. Updated built apps/web-root output after the changes.

--- a/apps/web-mobile/src/index.html
+++ b/apps/web-mobile/src/index.html
@@ -2628,6 +2628,7 @@
               <div class="danger-actions">
                 <button class="btn danger" id="clear-all">🛑 Clear All</button>
                 <button class="btn success" id="undo-clear" disabled>↩️ Undo Clear</button>
+                <button class="btn danger" id="reset-fresh">Reset to Fresh Defaults</button>
               </div>
               <div class="danger-disclaimer">Use these buttons at your own risk!</div>
             </div>
@@ -3446,6 +3447,7 @@
       const legalDisclaimerDialog = document.getElementById("legal-disclaimer-dialog");
       const legalDisclaimerCloseButton = document.getElementById("legal-disclaimer-close");
       const legalDisclaimerLink = document.getElementById("legal-disclaimer-link");
+      const resetFreshButton = document.getElementById("reset-fresh");
       const privacyPolicyDialog = document.getElementById("privacy-policy-dialog");
       const privacyPolicyCloseButton = document.getElementById("privacy-policy-close");
       const privacyPolicyLink = document.getElementById("privacy-policy-link");
@@ -5331,7 +5333,7 @@
           if (input.id === "filter-column" || input.id === "filter-query") {
             return;
           }
-          if (input.closest("#auth-dialog") || input.closest("#share-columns-dialog")) {
+          if (input.closest("#auth-dialog") || input.closest("#share-columns-dialog") || input.closest("#contact-dialog") || input.closest("#profile-name-dialog")) {
             return;
           }
           input.disabled = true;
@@ -6907,6 +6909,28 @@
       if (contactCloseButton) {
         contactCloseButton.addEventListener("click", () => {
           closeDialog(contactDialog);
+        });
+      }
+
+      if (resetFreshButton) {
+        resetFreshButton.addEventListener("click", async () => {
+          if (!confirm("Reset all data to fresh defaults? This cannot be undone.")) return;
+          if (!confirm("Are you sure? This will overwrite your current data.")) return;
+          try {
+            if (typeof applyFreshUserDefaults === "function") {
+              applyFreshUserDefaults();
+            }
+            saveTabsState();
+            saveState();
+            updateTabLogo();
+            await syncToSupabase();
+            renderTabs();
+            renderTable();
+            renderFooter();
+          } catch (error) {
+            showToast("Reset failed. Please try again.");
+            console.error("Fresh reset failed", error);
+          }
         });
       }
 
